test/parsetest/valid/new_array_expression.java
class Main{
	public int field1;

	public static void main(String[] args){
		int a = args[field1];
		new int[a || this.field1!=!a=c.d()][];
	}
}